--- a/index.html
+++ b/index.html
@@ -11,25 +11,38 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="title">Spiritual Vitamins</div>
+        
         <div class="dropdown">
             <button onclick="seriesSelect()" class="dropbtn">Select a Series</button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="#">Kindness</a>
-              <a href="#">Love</a>
-              <a href="#">Peace</a>
+              <a href="#">Noah_1</a>
+              <a href="#">Noah_2</a>
+              <a href="#">Evil</a>
+              <a href="#">Forgiveness</a>
+              <a href="#">Happiness</a>
+              <a href="#">Pray</a>
+              <a href="#">Spirit</a>
+              <a href="#">Study</a>
+              <a href="#">Sword</a>
+              <a href="#">Thankful</a>
+              <a href="#">Think</a>
             </div>
+            <div class="title">Spiritual Vitamins</div>
         </div>
         <div class="selection" id="selectedSeries"></div>
         
         <div class="vitamin">
             <div class="day-controls">
-            <button onclick="prev()" class="prevDayBtn" id="prev"></button>
-            <div class="day" id="day-display"></div>
-            <button onclick="next()" class="nextDayBtn" id="next"></button> 
+                    <div onclick="prev()" class="left-arrow" id="prev"></div>
+                <!-- <button onclick="prev()" class="prevDayBtn" id="prev"></button> -->
+                <div class="day" id="day-display"></div>
+                    <div onclick="next()" class="right-arrow" id="next"></div>
+                <!-- <button onclick="next()" class="nextDayBtn" id="next"></button>  -->
             </div>
             <div class="front">
-                <div class="front-content" id="show-selection"></div>
+                <div class="instructions" id="show-instructions">instructions:<br>1) Select Series<br>2) Click Vitamin<br>3)Click verse to get quote<br>4) Click arrows</div>
+                <img class="front-content" id="show-selection"></img>
+                <div class="scripture" id="scripture"></div>
             </div>
         </div>
     </div>
