--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@ I pray this in the name of Jesus. Amen.”</p>
                     <!-- <button onclick="next()" class="nextDayBtn" id="next"></button>  -->
                 </div>
                 <div class="front">
-                    <div class="instructions" id="show-instructions">instructions:<br>1) Select Series<br>2) Click Vitamin<br>3)Click verse to get quote<br>4) Click arrows</div>
+                    <div class="instructions" id="show-instructions">
+                        <p>Instructions:</p>
+                        <p>1) Click Select Series</p>
+                        <p>2) Click Vitamin</p>
+                        <p>3)Click verse to get quote</p>
+                        <p>4) Click arrows</p>
+                    </div>
                     <img class="front-content" id="show-selection"></img>
                     <div class="scripture" id="scripture"></div>
                 </div>
