--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@ I pray this in the name of Jesus. Amen.”</p>
                 </div>
                 <div class="front">
                     <div class="instructions" id="show-instructions">
-                        <p>Instructions:</p>
-                        <p>1) Click Select Series</p>
-                        <p>2) Click Vitamin</p>
+                        <h2>Instructions:</h2>
+                        <p>1) Click Select a Series button</p>
+                        <p>2) Click Vitamin to get verse</p>
                         <p>3)Click verse to get quote</p>
-                        <p>4) Click arrows</p>
+                        <p>4) Click arrows to change day</p>
                     </div>
                     <img class="front-content" id="show-selection"></img>
                     <div class="scripture" id="scripture"></div>
