--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ I pray this in the name of Jesus. Amen.”</p>
                 <a href="#">Sword</a>
                 <a href="#">Thankful</a>
                 <a href="#">Think</a>
+                <a href="#">Hope</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
             </div>
