--- a/assets/letters/Hope.html
+++ b/assets/letters/Hope.html
@@ -11,7 +11,7 @@
     <style>
         img {
             display: block;
-            width: 100%;
+            width: 100vw;
             position: relative;
             left: 0;
             right: 0;
