--- a/assets/letters/Sword.html
+++ b/assets/letters/Sword.html
@@ -12,6 +12,7 @@
         img {
             display: block;
             position: relative;
+            width: 100vw;
             left: 0;
             right: 0;
             margin: auto;
