--- a/assets/letters/Evil.html
+++ b/assets/letters/Evil.html
@@ -100,6 +100,6 @@ power of Satan to God, so that through faith in ME they will have their
 sins forgiven and receive their place among God’s people.”</p>
 
     <a href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
 </body>
 </html>
