--- a/assets/letters/Faith.html
+++ b/assets/letters/Faith.html
@@ -74,6 +74,6 @@
     <p>We admit that we are sinners and cannot Live up to God's perfect plan. So in order to be justified (which is just as if we had never sinned) with God we must claim Christ's work on the cross. This admission brings us peace with God and enjoyment with the gift of grace. The Bible reports in Romans 5:1-2 "Now that we have been put right with God through faith, we have peace with God through our Lord Jesus Christ. He has brought us, by FAITH, into the grace of God in which we now stand." Enjoy this month's vitamins.</p>
 
     <a href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
 </body>
 </html>
