--- a/assets/letters/Forgiveness.html
+++ b/assets/letters/Forgiveness.html
@@ -101,6 +101,6 @@
        How great are your works, O LORD. Your thoughts are very deep.”</p>
 
     <a href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
 </body>
 </html>
