--- a/assets/letters/Pray.html
+++ b/assets/letters/Pray.html
@@ -101,6 +101,6 @@
         prays for help in the Garden of Gethsemane. Practice Prayer!</p>
 
     <a href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
 </body>
 </html>
