--- a/assets/letters/Spirit.html
+++ b/assets/letters/Spirit.html
@@ -100,6 +100,6 @@
         accept God’s Salvation, and will never blaspheme the Holy Spirit.</p>
 
     <a href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
 </body>
 </html>
