--- a/assets/letters/Study.html
+++ b/assets/letters/Study.html
@@ -99,6 +99,6 @@
          transforms us.” Anonymous</p>
 
     <a href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
 </body>
 </html>
