--- a/assets/letters/Sword.html
+++ b/assets/letters/Sword.html
@@ -97,6 +97,6 @@
         <p>ARE YOU PUTTING ON GOD’S ARMOR TODAY AND THIS WEEK?</p>
 
     <a href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
 </body>
 </html>
