--- a/assets/letters/Thankful.html
+++ b/assets/letters/Thankful.html
@@ -102,6 +102,6 @@
     <p>HOW DO YOU CELEBRATE THANKSGIVING?</p>
 
     <a href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
 </body>
 </html>
