--- a/assets/letters/Think.html
+++ b/assets/letters/Think.html
@@ -96,6 +96,6 @@
         continually from our Heavenly Father</p>
 
     <a href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
 </body>
 </html>
