--- a/assets/letters/Noah_1.html
+++ b/assets/letters/Noah_1.html
@@ -63,7 +63,7 @@
     </style>
 </head>
 <body>
-    <img src="/assets/scanned vitamins/noah_1.jpg"/>
+    <img src="/assets/scanned vitamins/Noah_1.jpg"/>
     <p>Exodus 20:5-6</p>
     <p>"You shall not worship them (other gods), for I the LORD your God am a jealous God visiting the sins of the fathers on the children to the 3rd and 4th generation of those who hate me, but showing lovingkindness to thousands to those who love me and keep my commandments."</p>
     <p>GOD used Noah as an example for us.</p>
