--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <a href="#">Forgiveness</a>
                 <a href="#">Happiness</a>
                 <a href="#">Pray</a>
+                <a href="#">Rewards</a>
                 <a href="#">Spirit</a>
                 <a href="#">Study</a>
                 <a href="#">Sword</a>
