--- a/assets/letters/Rewards.html
+++ b/assets/letters/Rewards.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rewards</title>
+    <title>Crowns of Reward</title>
     <link rel="stylesheet" media="screen and (min-width: 900px)" href="hopeWidescreen.css">
     <link rel="stylesheet" media="screen and (max-width: 900px)" href="hopeTablet.css">
     <link rel="stylesheet" media="screen and (max-width: 600px)" href="hopePhone.css">
