--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
                 <a href="#">Forgiveness</a>
                 <a href="#">Happiness</a>
                 <a href="#">Pray</a>
-                <a href="#">Rewards</a>
+                <!--<a href="#">Rewards</a>-->
+                <!--<a href="#">Faith</a>-->
+                <!--<a href="#">Joy</a>-->
+                <!--<a href="#">Christmas</a>-->
+                <!--<a href="#">Easter</a>-->
                 <a href="#">Spirit</a>
                 <a href="#">Study</a>
                 <a href="#">Sword</a>
