--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#">Forgiveness</a>
                 <a href="#">Happiness</a>
                 <a href="#">Pray</a>
-                <!--<a href="#">Rewards</a>-->
+                <a href="#">Rewards</a>
                 <!--<a href="#">Faith</a>-->
                 <!--<a href="#">Joy</a>-->
                 <!--<a href="#">Christmas</a>-->
