--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="#">Happiness</a>
                 <a href="#">Pray</a>
                 <a href="#">Rewards</a>
-                <!--<a href="#">Faith</a>-->
+                <a href="#">Faith</a>
                 <!--<a href="#">Joy</a>-->
                 <!--<a href="#">Christmas</a>-->
                 <!--<a href="#">Easter</a>-->
