--- a/assets/letters/Rewards.html
+++ b/assets/letters/Rewards.html
@@ -67,9 +67,9 @@
     <p>Crowns of Reward
  
  
-        <p>Jesus said, "Behold, I anl coming quickly, and My revvard is with Me to render to every nan according to what he has done." Revelation 22:12</p>
+        <p>Jesus said, "Behold, I am coming quickly, and My reward is with Me to render to every man according to what he has done." Revelation 22:12</p>
         <p>Last month my message to you was about Heaven. I hope you enjoyed reading the letter and perhaps learned some new facts about heaven. Today I want to encourage you with the good news of two things. First, by accepting the free gift of salvation and faith in Jesus Christ your earn the joy of living eternally in heaven after this life. Second, you earn a reward for running the good race here on earth that God has planned for you. The Biblical word for Crown is wreath. This is like the rewards in Rome that men running a race won for being the winner.</p>
-        <p>Why would anyone want to win a Crown? Why do we want to receive a salary for work done here on earth? It is a reward for work well done. An affirmation J -ABU La and appreciation for a life well lived. I want that, don't you?</p>
+        <p>Why would anyone want to win a Crown? Why do we want to receive a salary for work done here on earth? It is a reward for work well done. An affirmation and appreciation for a life well lived. I want that, don't you?</p>
         <p>Why did God choose these Crowns? Well, let's look at them.</p>
         <p>1.	Crown of Victory- 1 Corinthians 9:24-27. This represents the life that loved Jesus, overcame the constant work of the world's attempt to draw the person away from God's love. 1 Corinthians 2:9; 1 Corinthians 3:7-9.</p>
         <p>2.	Crown of Exultation or Joy- 1 Thessalonians 2:19. Joy is an emotion of wellbeing, a happiness that lifts our life in delight such as we never felt before.</p>
