--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <div class="topnav">
                 <a class="active" href="#home">Home</a>
                 <a href="./pages/salvation.html">How to be saved</a>
-                <a href="#news">News</a>
+                <!--<a href="#news">News</a>
                 <a href="#contact">Contact</a>
-                <a href="#about">About</a>
+                <a href="#about">About</a>-->
               </div> 
         </header>
         <div onClick="openMenu()" class="menu" id="menuBtn">More...</div>
