--- a/index.html
+++ b/index.html
@@ -25,23 +25,24 @@
             <div class="dropdown">
                 <button onclick="seriesSelect()" class="dropbtn">Select a Series</button>
                 <div id="myDropdown" class="dropdown-content">
-                <a href="#">Noah_1</a>
-                <a href="#">Noah_2</a>
-                <a href="#">Evil</a>
-                <a href="#">Forgiveness</a>
-                <a href="#">Happiness</a>
-                <a href="#">Pray</a>
-                <a href="#">Rewards</a>
-                <a href="#">Faith</a>
-                <!--<a href="#">Joy</a>-->
-                <!--<a href="#">Christmas</a>-->
-                <!--<a href="#">Easter</a>-->
-                <a href="#">Spirit</a>
-                <a href="#">Study</a>
-                <a href="#">Sword</a>
-                <a href="#">Thankful</a>
-                <a href="#">Think</a>
-                <a href="#">Hope</a>
+                    <!--<a href="#">Easter</a>-->    
+                    <a href="#">Noah_1</a>
+                    <a href="#">Noah_2</a>
+                    <a href="#">Happiness</a>
+                    <a href="#">Rewards</a>
+                    <!--<a href="#">Joy</a>-->    
+                    <a href="#">Time</a>
+                    <a href="#">Spirit</a>
+                    <a href="#">Study</a>
+                    <a href="#">Faith</a>
+                    <a href="#">Pray</a>
+                    <a href="#">Forgiveness</a>
+                    <a href="#">Think</a>    
+                    <a href="#">Sword</a>    
+                    <a href="#">Evil</a>
+                    <a href="#">Thankful</a>
+                    <!--<a href="#">Christmas</a>-->
+                    <a href="#">Hope</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div onclick="openLetter()" class="letter-button" id="letterBtn">
