--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <!--<a href="#">Easter</a>-->    
                     <a href="#">Noah_1</a>
                     <a href="#">Noah_2</a>
+                    <a href="#">Promise</a>
                     <a href="#">Happiness</a>
                     <a href="#">Rewards</a>
                     <!--<a href="#">Joy</a>-->    
