--- a/assets/letters/Spirit.html
+++ b/assets/letters/Spirit.html
@@ -42,7 +42,7 @@
         5:23-24</a>, Paul lists 9 character traits the Holy Spirit produces in a believer’s life. 
         “But the fruit of the Spirit is love, joy, peace, patience, kindness, goodness, 
         faithfulness, gentleness, and self-control.” His Warnings: Do Not Quench the 
-        Holy Spirit (<a href="#">1 Thessalonians 5: 19</a>); Do Not Grieve the Holy Spirit (<a href="#">Ephesians 
+        Holy Spirit (<a href="#">1 Thessalonians 5:19</a>); Do Not Grieve the Holy Spirit (<a href="#">Ephesians 
         4:30</a>); Do not commit Blasphemy against the Holy Spirit, because it is the only sin 
         in Scripture that is unforgivable.</p> 
         <p>My letter comes with LOVE. I pray that you will take God’s Word’s to heart, will 
