--- a/assets/letters/Thankful.html
+++ b/assets/letters/Thankful.html
@@ -46,7 +46,7 @@
         <p>“But the wisdom from above is pure, first of all; it is also peaceful, gentle, and friendly; it is full of 
         compassion and produces a harvest of good deeds; it is free from prejudice and hypocrisy. And 
         righteousness is the harvest that is produced from the seeds the peacemakers planted in 
-        peace.” <a href="#">James 3: 17-18</a></p> 
+        peace.” <a href="#">James 3:17-18</a></p> 
     <p>HOW DO YOU CELEBRATE THANKSGIVING?</p>
 
     <a class="back-button" href="../../index.html">Back to Vitamins</a>
