--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <a class="active" href="#home">Home</a>
                 <a href="./pages/salvation.html">How to be saved</a>
                 <!--<a href="#news">News</a>
-                <a href="#contact">Contact</a>
-                <a href="#about">About</a>-->
+                <a href="#contact">Contact</a>-->
+                <a href="./pages/about.html">About</a>
               </div> 
         </header>
         <div onClick="openMenu()" class="menu" id="menuBtn">More...</div>
