--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <a href="#">Rewards</a>
                     <!--<a href="#">Joy</a>-->    
                     <a href="#">Time</a>
+                    <a href="#">Love</a>
                     <a href="#">Spirit</a>
                     <a href="#">Study</a>
                     <a href="#">Faith</a>
