--- a/assets/letters/Hope.html
+++ b/assets/letters/Hope.html
@@ -49,7 +49,7 @@
      <p>May you begin 2022 with CHRIST IN YOU, THE HOPE OF GLORY</p>
     <!-- <button onclick="closeLetter()">Back to Vitamins</button> -->
     <a class="back-button" href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
     <script src="letter.js" type="text/javascript"></script>
 </body>
 </html>
