--- a/assets/letters/Thankful.html
+++ b/assets/letters/Thankful.html
@@ -50,7 +50,7 @@
     <p>HOW DO YOU CELEBRATE THANKSGIVING?</p>
 
     <a class="back-button" href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
     <script src="letter.js" type="text/javascript"></script>
 </body>
 </html>
