--- a/assets/letters/Evil.html
+++ b/assets/letters/Evil.html
@@ -48,7 +48,7 @@ power of Satan to God, so that through faith in ME they will have their
 sins forgiven and receive their place among God’s people.”</p>
 
 <a class="back-button" href="../../index.html">Back to Vitamins</a>
-<div></div>>
+<div></div>
 <script src="letter.js" type="text/javascript"></script>
 </body>
 </html>
