--- a/assets/letters/Sword.html
+++ b/assets/letters/Sword.html
@@ -46,7 +46,7 @@
         <p>ARE YOU PUTTING ON GOD’S ARMOR TODAY AND THIS WEEK?</p>
 
         <a class="back-button" href="../../index.html">Back to Vitamins</a>
-        <div></div>>
+        <div></div>
         <script src="letter.js" type="text/javascript"></script>
 </body>
 </html>
