--- a/assets/letters/Think.html
+++ b/assets/letters/Think.html
@@ -45,7 +45,7 @@
         continually from our Heavenly Father</p>
 
     <a class="back-button" href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
     <script src="letter.js" type="text/javascript"></script>
 </body>
 </html>
