--- a/assets/letters/Forgiveness.html
+++ b/assets/letters/Forgiveness.html
@@ -49,7 +49,7 @@
        How great are your works, O LORD. Your thoughts are very deep.”</p>
 
     <a class="back-button" href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
     <script src="letter.js" type="text/javascript"></script>
 </body>
 </html>
