--- a/assets/letters/Pray.html
+++ b/assets/letters/Pray.html
@@ -50,7 +50,7 @@
         prays for help in the Garden of Gethsemane. Practice Prayer!</p>
 
     <a class="back-button" href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
     <script src="letter.js" type="text/javascript"></script>
 </body>
 </html>
