--- a/assets/letters/Spirit.html
+++ b/assets/letters/Spirit.html
@@ -49,7 +49,7 @@
         accept God’s Salvation, and will never blaspheme the Holy Spirit.</p>
 
     <a class="back-button" href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
     <script src="letter.js" type="text/javascript"></script>
 </body>
 </html>
