--- a/assets/letters/Rewards.html
+++ b/assets/letters/Rewards.html
@@ -29,7 +29,7 @@
         
 
     <a class="back-button" href="../../index.html">Back to Vitamins</a>
-    <div></div>>
+    <div></div>
     <script src="letter.js" type="text/javascript"></script>
 </body>
 </html>
