--- a/assets/letters/Noah_1.html
+++ b/assets/letters/Noah_1.html
@@ -14,7 +14,7 @@
     <img src="/assets/scanned vitamins/noah1.jpg"/>
     <p><a href="#">Exodus 20:5-6</a> "You shall not worship them (other gods), for I the LORD your God am a jealous God visiting the sins of the fathers on the children to the 3rd and 4th generation of those who hate me, but showing lovingkindness to thousands to those who love me and keep my commandments."</p>
     <p>GOD used Noah as an example for us.</p>
-    <p>If you open your Bible to Genesis Chapter 5 Noah's life begins. In Chapter 6:1-22 we read about the condition of the world in Noah's time. God tells about how corrupt and evil all the people were. It is much like that today in America and even the rest of the world. Everyone except Noah was wicked and evil and without a love for the LORD GOD, our creator.</p>
+    <p>If you open your Bible to Genesis Chapter 5 Noah's life begins. In <a href="#">Genesis 6:1-22</a> we read about the condition of the world in Noah's time. God tells about how corrupt and evil all the people were. It is much like that today in America and even the rest of the world. Everyone except Noah was wicked and evil and without a love for the LORD GOD, our creator.</p>
     <p>The Ark was God's protection for the only man, Noah, who was righteous in God's world. Noah's wife, three sons and their wives were covered under Noah's goodness and were saved on the Ark with two of each animal.</p>
     <p>The story gets better for Noah. In another vitamin, I will share scripture on how you can be a Noah and not have to suffer the spiritual death that all of Noah's neighbors did.</p>
         
