--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <a href="#">Thankful</a>
                     <!--<a href="#">Christmas</a>-->
                     <a href="#">Hope</a>
+                    <a href="#">Letters</a>
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div onclick="openLetter()" class="letter-button" id="letterBtn">
