--- a/assets/letters/Letters.html
+++ b/assets/letters/Letters.html
@@ -14,36 +14,36 @@
     <img src="/assets/scanned vitamins/letters.jpg"/>
     <p><a href="#">Deuteronomy 7:9</a>  “Know therefore that the Lord your God; He is God, the faithful 
         God, who keeps His covenant and His lovingkindness to the 1000th generation 
-        with those who love Him and keep His commandments.”
-        What a beautiful promise by our Lord! Can you begin to understand the possible 
+        with those who love Him and keep His commandments.”</p>
+        <p>What a beautiful promise by our Lord! Can you begin to understand the possible 
         benefit God’s promise would give to a Christian’s family who received His love to 
         the thousandth generation? In the Old Testament the word hesed, holds the idea 
         of loyalty born out of love and kindness. We see the word lovingkindness used 
         to express hesed love in the <a href="#">Deuteronomy 7:9</a> promise. God’s love is called 
         agape love in the New Testament Greek and holds the idea of selfless love or 
-        divine love, God’s treasured possession.
-        Modern Love comes in so many colors and flavors. It is really hard to distinguish 
+        divine love, God’s treasured possession.</p>
+        <p>Modern Love comes in so many colors and flavors. It is really hard to distinguish 
         what kind of love we are talking about. We understand love to embrace the 
         definition of friendship, romantic love, brotherly love or even just a preference for 
-        something. 
-        Adam and Eve were loved by God but they introduced sin into the world by 
+        something.</p> 
+        <p>Adam and Eve were loved by God but they introduced sin into the world by 
         disobeying God and behaving in depraved disobedience. This was passed on to 
         humans born to future generations. Jesus arrived in God’s timing and “loved us 
         to death”. He defeated sin by His loving sacrificial death on the cross. We read
         in <a href="#">1 Corinthians 13:13</a> Love is greater than anything else. Love is the essence of 
         God and He has birthed that great gift in us the moment we become His child. 
-        It’s a mystery and a gift all wrapped up in the salvation experience. 
-        <a href="#">Romans 5:8</a> reads “But God demonstrates His own love toward us that while we 
+        It’s a mystery and a gift all wrapped up in the salvation experience.</p> 
+        <p><a href="#">Romans 5:8</a> reads “But God demonstrates His own love toward us that while we 
         were yet sinners Christ died for us.” WOW! <a href="#">Ephesians 3:3</a> tells us “that by 
         revelation there was made known to me (Paul) the mystery, as I wrote before in 
         brief. (This mystery was not something mysterious but was something revealed 
         through Paul.) pThe mystery was not new. Gentiles were mentioned in the Old 
         Testament as being saved but now due to God’s great love both Jews and 
-        Gentiles will be blessed. We will be equal heirs in the one body of Christ’s love.
-        God’s blessing is so profound. You do not have to remain a sinner, cut off from 
+        Gentiles will be blessed. We will be equal heirs in the one body of Christ’s love.</p>
+        <p>God’s blessing is so profound. You do not have to remain a sinner, cut off from 
         God’s love. Pray and ask the Creator God to forgive you for your sin. Ask Jesus 
         to be King of your life and ask Jesus to reflect His Love in you.
-        I will end with advice from the half brother of Jesus. <a href="#">Jude 21</a> “Keep yourself in 
+        <p>I will end with advice from the half brother of Jesus. <a href="#">Jude 21</a> “Keep yourself in 
         the love of God, waiting anxiously for the mercy of our Lord Jesus Christ to 
         eternal life.” Allow love to be your hallmark.</p>        
     <a class="back-button" href="../../index.html">Back to Vitamins</a>
