--- a/assets/letters/Letters.html
+++ b/assets/letters/Letters.html
@@ -37,7 +37,7 @@
         were yet sinners Christ died for us.” WOW! <a href="#">Ephesians 3:3</a> tells us “that by 
         revelation there was made known to me (Paul) the mystery, as I wrote before in 
         brief. (This mystery was not something mysterious but was something revealed 
-        through Paul.) pThe mystery was not new. Gentiles were mentioned in the Old 
+        through Paul.) The mystery was not new. Gentiles were mentioned in the Old 
         Testament as being saved but now due to God’s great love both Jews and 
         Gentiles will be blessed. We will be equal heirs in the one body of Christ’s love.</p>
         <p>God’s blessing is so profound. You do not have to remain a sinner, cut off from 
