--- a/pages/salvation.html
+++ b/pages/salvation.html
@@ -5,19 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How to be Saved</title>
-    <!-- <link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
-    <link rel="stylesheet" media="screen and (max-width: 900px)" href="tablet.css">
-    <link rel="stylesheet" media="screen and (max-width: 600px)" href="phone.css"> -->
     <link rel="stylesheet" href="pages.css">
 </head>
 <body>
-    <header class="header"> <!-- header and topnav only used in widescreen views -->
+    <header class="header">
         <div class="topnav">
             <a href="..\index.html">Home</a>
             <a class="active" href="/pages/salvation.html">How to be saved</a>
-            <!-- <a href="#news">News</a>
-            <a href="#contact">Contact</a> -->
             <a href="/pages/about.html">About</a>
+            <a href="/pages/support.html">Feedback</a>
           </div> 
     </header>
     <div class="info" id="info">
@@ -36,8 +32,7 @@
         
         I pray this in the name of Jesus. Amen.”</p>
         <p>Did you pray this prayer?</p>
-                    <!-- <div class="decision"><a href="..\index.html">Yes, I prayed!</a><a href="/assets/letters/questions.html">No, I have questions</a></div> -->
-                    <!-- <button onclick="returnMain()" class="back-button">Return to Vitamins</button> -->
+                    <div class="decision"><a href="saved.html">Yes, I prayed!</a><a href="questions.html">No, I have questions</a></div>
                     <a class="back-button" href="../../index.html">Back to Vitamins</a>
                 </div>
 </body>
