--- a/pages/about.html
+++ b/pages/about.html
@@ -18,6 +18,7 @@
             <!-- <a href="#news">News</a>
             <a href="#contact">Contact</a> -->
             <a class="active" href="/pages/about.html">About</a>
+            <a href="/pages/support.html">Feedback</a>
           </div> 
     </header>
     <!-- <img src="/assets/scanned vitamins/noah1.jpg"/> -->
