--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
             <div class="topnav">
                 <a class="active" href="#home">Home</a>
                 <a href="./pages/salvation.html">How to be saved</a>
-                <!--<a href="#news">News</a>
-                <a href="#contact">Contact</a>-->
                 <a href="./pages/about.html">About</a>
+                <a href="./pages/feedback.html">Contact</a>
               </div> 
         </header>
         <div onClick="openMenu()" class="menu" id="menuBtn">More...</div>
