--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a class="active" href="#home">Home</a>
                 <a href="./pages/salvation.html">How to be saved</a>
                 <a href="./pages/about.html">About</a>
-                <a href="./pages/feedback.html">Contact</a>
+                <a href="./pages/support.html">Feedback</a>
               </div> 
         </header>
         <div onClick="openMenu()" class="menu" id="menuBtn">More...</div>
