--- a/assets/letters/Faith.html
+++ b/assets/letters/Faith.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <img src="/assets/scanned vitamins/faith.jpg"/>
-    <p>THE FELLOWSHIP OF FAITH</p>
+    <p class="title">The Fellowship of Faith</p>
     <p>Chapter 11 of the book of Hebrews contains a record of all the faithful of God who believed the Lord's Promises but had not received the Promises at their death. <a href="#">Hebrews 12:2</a> calls us to "Keep our eyes fixed on Jesus, on whom our faith depends, from beginning to end."</p>
     <p>What exactly is this FAITH that we are called to focus upon?</p>
     <p>We all have faith. When we drive down the highway we believe that the white Line down the center is going to keep unknown drivers on their side so that they will not crash into us who are driving in the other direction. Or when we enter a dark room and switch on the Light, we believe that the room will become bathed in electric light even if we don't know how that exactly happens. Why then is it so difficult to have Faith in the creator of the universe? <a href="#">Hebrews 11:1</a> says, "Faith is to be sure of the things we hope for, to be certain of the things we cannot see." Our Fellowship with Jesus is strengthen by Faith.</p>
