--- a/assets/letters/Forgiveness.html
+++ b/assets/letters/Forgiveness.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <img src="/assets/scanned vitamins/forgiveness.jpg"/>
-    <p>“Forgiveness is to be set loose from sin.”</p> 
+    <p class="title">“Forgiveness is to be set loose from sin.”</p> 
     <p>The above is a quote by G. Campbell Morgan and states a perfect 
        definition of the process of making our thoughts, actions or resentments 
        pardoned with God and our fellowman. Absolution from our sin toward 
