--- a/assets/letters/Hope.html
+++ b/assets/letters/Hope.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <img src="/assets/scanned vitamins/hope.png"/>
-    <p>Christ in you --- The Hope of Glory</p>
+    <p class="title">Christ in you --- The Hope of Glory</p>
     <p><a href="#">COLOSSIANS 1:27</a> “To them GOD willed to make known what are the riches of 
     the glory of this mystery among the Gentiles which is Christ in you, the Hope of
     Glory. Also read <a href="#">Ephesians 3:3-6</a></p>
