--- a/assets/letters/Rewards.html
+++ b/assets/letters/Rewards.html
@@ -13,21 +13,17 @@
 </head>
 <body>
     <img src="/assets/scanned vitamins/rewards.jpg"/>
-    <p>Crowns of Reward
- 
- 
-        <p>Jesus said, "Behold, I am coming quickly, and My revvard is with Me to render to every nan according to what he has done." <a href="#">Revelation 22:12</a></p>
-        <p>Last month my message to you was about Heaven. I hope you enjoyed reading the letter and perhaps learned some new facts about heaven. Today I want to encourage you with the good news of two things. First, by accepting the free gift of salvation and faith in Jesus Christ your earn the joy of living eternally in heaven after this life. Second, you earn a reward for running the good race here on earth that God has planned for you. The Biblical word for Crown is wreath. This is like the rewards in Rome that men running a race won for being the winner.</p>
-        <p>Why would anyone want to win a Crown? Why do we want to receive a salary for work done here on earth? It is a reward for work well done. An affirmation and appreciation for a life well lived. I want that, don't you?
-        Why did God choose these Crowns? Well, let's look at them.</p>
-        <p>1. Crown of Victory - <a href="#">1 Corinthians 9:24-27</a> - This represents the life that loved Jesus, overcame the constant work of the world's attempt to draw the person away from God's love. <a href="#">1 Corinthians 2:9</a>; <a href="#">1 Corinthians 3:7-9</a>.</p>
-        <p>2. Crown of Exultation or Joy - <a href="#">1 Thessalonians 2:19</a> - Joy is an emotion of wellbeing, a happiness that lifts our life in delight such as we never felt before.</p>
-        <p>3. Crown of Righteousness - <a href="#">2 Timothy 4:8</a> - Righteousness in the Biblical definition of this word is associated with judgment and justice. Being in right standing with God. This means loving His Son Jesus and the work Jesus did for us on the cross. <a href="#">Psalm 96:13</a>; <a href="#">Ephesians 4:24</a>; <a href="#">2 Peter 3:13</a></p>
-        <p>4. Crown of Life - <a href="#">James 1:12</a> - This promise of life has no end. It is eternal love, joy, justice and peace. What a promise! You can trust it. <a href="#">Revelation 2:10</a> reads "Be faithful until death, and I will give you the Crown of Life."</p>
-        <p>5. Crown of Glory - <a href="#">1 Peter 5:4</a> - In <a href="#">Hebrews 2:9</a> we read that Jesus was crowned by God the Father with glory and honor for the suffering by Jesus as a substitution for our sin. The Bible defines Glory as honor and splendor. We will be honored as Jesus was with a Crown of Splendor.</p>
-        <p>That is correct. Your earn a reward of Crowns with which you can worship the LORD when you enter heaven. In <a href="#">Psalm 21:3</a> we read that God gives us  blessings of good things and even places a Crown of Gold on our head. The  prize of heaven is for those who are steadfast in their love for Jesus for the free gift of salvation that He gave for us while here on earth.</p>
-        
-
+    <p class="title">Crowns of Rewards</p>
+    <p>Jesus said, "Behold, I am coming quickly, and My revvard is with Me to render to every nan according to what he has done." <a href="#">Revelation 22:12</a></p>
+    <p>Last month my message to you was about Heaven. I hope you enjoyed reading the letter and perhaps learned some new facts about heaven. Today I want to encourage you with the good news of two things. First, by accepting the free gift of salvation and faith in Jesus Christ your earn the joy of living eternally in heaven after this life. Second, you earn a reward for running the good race here on earth that God has planned for you. The Biblical word for Crown is wreath. This is like the rewards in Rome that men running a race won for being the winner.</p>
+    <p>Why would anyone want to win a Crown? Why do we want to receive a salary for work done here on earth? It is a reward for work well done. An affirmation and appreciation for a life well lived. I want that, don't you?
+    Why did God choose these Crowns? Well, let's look at them.</p>
+    <p>1. Crown of Victory - <a href="#">1 Corinthians 9:24-27</a> - This represents the life that loved Jesus, overcame the constant work of the world's attempt to draw the person away from God's love. <a href="#">1 Corinthians 2:9</a>; <a href="#">1 Corinthians 3:7-9</a>.</p>
+    <p>2. Crown of Exultation or Joy - <a href="#">1 Thessalonians 2:19</a> - Joy is an emotion of wellbeing, a happiness that lifts our life in delight such as we never felt before.</p>
+    <p>3. Crown of Righteousness - <a href="#">2 Timothy 4:8</a> - Righteousness in the Biblical definition of this word is associated with judgment and justice. Being in right standing with God. This means loving His Son Jesus and the work Jesus did for us on the cross. <a href="#">Psalm 96:13</a>; <a href="#">Ephesians 4:24</a>; <a href="#">2 Peter 3:13</a></p>
+    <p>4. Crown of Life - <a href="#">James 1:12</a> - This promise of life has no end. It is eternal love, joy, justice and peace. What a promise! You can trust it. <a href="#">Revelation 2:10</a> reads "Be faithful until death, and I will give you the Crown of Life."</p>
+    <p>5. Crown of Glory - <a href="#">1 Peter 5:4</a> - In <a href="#">Hebrews 2:9</a> we read that Jesus was crowned by God the Father with glory and honor for the suffering by Jesus as a substitution for our sin. The Bible defines Glory as honor and splendor. We will be honored as Jesus was with a Crown of Splendor.</p>
+    <p>That is correct. Your earn a reward of Crowns with which you can worship the LORD when you enter heaven. In <a href="#">Psalm 21:3</a> we read that God gives us  blessings of good things and even places a Crown of Gold on our head. The  prize of heaven is for those who are steadfast in their love for Jesus for the free gift of salvation that He gave for us while here on earth.</p>
     <a class="back-button" href="../../index.html">Back to Vitamins</a>
     <div></div>
     <script src="letter.js" type="text/javascript"></script>
