--- a/index.html
+++ b/index.html
@@ -26,27 +26,30 @@
                 <button onclick="seriesSelect()" class="dropbtn">Select a Series</button>
                 <div id="myDropdown" class="dropdown-content">
                     <!--<a href="#">Easter</a>-->    
-                    <a href="#">Noah_1</a>
-                    <a href="#">Noah_2</a>
-                    <a href="#">Promise</a>
-                    <a href="#">Happiness</a>
-                    <a href="#">Rewards</a>
+                    <a class="normal-links" href="#" data-name="Ark">Noah's Ark</a>
+                    <a class="normal-links" href="#" data-name="Worship">Worship the Lord</a>
+                    <a class="normal-links" href="#" data-name="Promise">God's Rainbow Promise</a>
+                    <a class="normal-links" href="#" data-name="Happiness">Happiness in Heaven</a>
+                    <a class="normal-links" href="#" data-name="Rewards">Crowns of Rewards</a>
                     <!--<a href="#">Joy</a>-->    
-                    <a href="#">Time</a>
-                    <a href="#">Love</a>
-                    <a href="#">Spirit</a>
-                    <a href="#">Study</a>
-                    <a href="#">Faith</a>
-                    <a href="#">Pray</a>
-                    <a href="#">Forgiveness</a>
-                    <a href="#">Think</a>    
-                    <a href="#">Sword</a>    
-                    <a href="#">Evil</a>
-                    <a href="#">Thankful</a>
+                    <a class="normal-links" href="#" data-name="Time">Time</a>
+                    <a class="normal-links" href="#" data-name="Love">Valentines - God's Love</a>
+                    <a class="normal-links" href="#" data-name="Spirit">The Holy Spirit</a>
+                    <a class="normal-links" href="#" data-name="Study">Studying Scripture</a>
+                    <a class="normal-links" href="#" data-name="Faith">Fellowship of Faith</a>
+                    <a class="normal-links" href="#" data-name="Pray">Pray Daily</a>
+                    <a class="normal-links" href="#" data-name="Forgiveness">Forgiveness</a>
+                    <a class="normal-links" href="#" data-name="Think">Think About...</a>    
+                    <a class="normal-links" href="#" data-name="Sword">Sword of the Spirit</a>    
+                    <a class="normal-links" href="#" data-name="Evil">Evil Abounds</a>
+                    <a class="normal-links" href="#" data-name="Thankful">Thankful Hearts</a>
                     <!--<a href="#">Christmas</a>-->
-                    <a href="#">Hope</a>
-                    <a href="#">Letters</a>
-                    <a href="#">Grace</a>
+                    <a class="normal-links" href="#" data-name="Hope">Hope of Glory</a>
+                    <a class="normal-links" href="#" data-name="Letters">Love Letters from God</a>
+                    <a class="normal-links" href="#" data-name="Grace">Grace</a>
+                    <a class="normal-links" href="#" data-name="Wisdom">Wisdom from Above</a>
+                    <!-- <a class="bonus" href="#" data-name="Resurrection">Bonus Vitamin - Royal Resurrection</a> -->
+
                 </div>
                 <div class="title">Spiritual Vitamins</div>
                 <div onclick="openLetter()" class="letter-button" id="letterBtn">
