--- a/assets/letters/Grace.html
+++ b/assets/letters/Grace.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <img src="/assets/scanned vitamins/grace.jpg"/>
-    <p>God's Gift of Grace</p>
+    <p class="title">God's Gift of Grace</p>
     <p><a href="#">John 1:14</a> "And the WORD became flesh, and dwelt among us, and we beheld His glory, glory as of the only begotten from the Father, full of grace and truth."</p>
     <p>How much do you understand about God’s gift of GRACE?  I knew very little about grace. The Greek word for grace is <i>charin</i> which means benevolence or undeserved favor.</p> 
     <p>A closer study of Grace reveals a deeper understanding.  Grace can first be found in <a href="#">Genesis 6:8</a>.  Scripture reports God found favor with Noah.  The Hebrew word favor translates as the giving of grace.  More profound is the information that the birth of Jesus was the gift of grace. <a href="#">Titus 2:11</a> ”For the grace of God has appeared, bringing salvation to all men.”</p>
