--- a/assets/letters/Love.html
+++ b/assets/letters/Love.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <img src="/assets/scanned vitamins/love.jpg"/>
-    <p>FEBRUARY 2021 VALENTINES ---- GOD'S LOVE</p> 
+    <p class="title">FEBRUARY 2021 VALENTINES ---- GOD'S LOVE</p> 
         <p>I love February because love is the emphasis for the month. The verses 
         that you will be reading will be encouraging you to express a very distinct 
         love from God.</p> 
