--- a/assets/letters/Resurrection.html
+++ b/assets/letters/Resurrection.html
@@ -9,14 +9,30 @@
     <link rel="stylesheet" media="screen and (max-width: 900px)" href="hopeTablet.css">
     <link rel="stylesheet" media="screen and (max-width: 600px)" href="hopePhone.css"> -->
     <link rel="stylesheet" href="letter.css">
+    
 </head>
 <body>
     <img src="/assets/scanned vitamins/resurrection.jpg"/>
-    <p class="title">The Royal Resurrection</p>
-    <p></p>
-    <p><a href="#">James 1:17</a></p>
-    <p></p>
-    <p></p>
+    <p class="title">Royal Resurrection</p>
+    <p><a href="#">Job 19:25</a> “As for me, I know that my Redeemer lives, and at the last He will take His stand on earth.  Even after my skin is destroyed, yet from my flesh I shall see God, whom I myself shall behold, and whom my eyes will see and not another. My heart faints within me!</p>
+    <p>The book of Job is reported to be one of, if not the very earliest book written in the Bible. The verse above is the most quoted in the book of Job. The word Redeemer has the translation of Vindicator, Defender, or Kinsman. That is what Jesus Christ is for us. Jesus, our brother, friend and Savior. Jesus was committed to be our Savior from His birth to death.</p>
+    <p class="title">THE KING’S PLAN:  DAY 1 BEGAN THE SUNDAY BEFORE PASSOVER</p>
+    <p>Jesus made careful plans before His Triumphal Entrance into Jerusalem. We read about the parables Jesus related to prepare the crowd for His mission. (The Judgement of Gentiles in Matthew; The Sacrifice of the Servant Son in Mark and Luke.) The disciples prepare for the coming Passover Meal.  <a href="#">Mark 19:30</a>.  A plot is taking place by the Jewish leaders who hated Jesus.  Judas’ betrayal of Jesus was sealed after the devoted woman put perfume on Jesus’ feet as a burial offering. <a href="#">Matthew 26:6-13</a></p>
+    <p>Jesus was giving the crowd a picture of His future Kingship.  The crowd believed He was a present earthly King, but it would not happen until the Millennium. On Sunday before Passover Jesus enters Jerusalem riding on a colt, the people shower Him with Palm leaves and shouts of Hosanna! The crowd acknowledged His future Kingship!</p>
+    <p class="title">CHRIST’S COMPASSION: ON DAY 2 WE THINK OF THE GOOD SHEPHERD</p>
+    <p>In <a href="#">JOHN 1:29</a> “Behold, the Lamb of God who takes away the sin of the world.  At that time, God confirmed Jesus as His Son and sent His Spirit. Jesus cleansed the Temple on Monday and the event is in <a href="#">Mark 11:15-18</a>.</p>
+    <p class="title">CHRIST, A CORNERSTONE OF CONTENTION: DAY 3 ROCK OF OFFENSE</p>
+    <p>In <a href="#">Luke 21:5-36</a> we read about the Olivet Discourse. Jesus tells the disciples that the Temple stones will be torn down and not one stone left.
+    <p class="title">ON DAY 4, WE HAVE NO RECORDED EVENTS. JESUS is in BETHANY. We begin the Passover discussion on Wednesday.</p>
+    <p class="title">THURSDAY, DAY 5: THE PASSOVER MEAL TAKES PLACE</p>
+    <p>The Passover Meal is the pinnacle of the Jewish holidays. Jesus washes the disciples’ feet, symbolic of servanthood. Judas leaves to betray Jesus.</p>
+    <p class="title">FRIDAY, DAY 6: A DAY OF BETRAYAL, ARREST, CRUCIFIXION, and BURIAL</p>  
+    <p>All are described in all four Gospels and reading about it will bring tears. “Salvation comes through a cross and a crucified Christ.” Andrew Murry.</p>
+    <p class="title">SATURDAY, DAY 7: JESUS IS ALREADY BURIED IN THE TOMB - WE WAIT!</p>
+    <p>Joseph of Arimathea boldly asked for Jesus body. <a href="#">John 19:38</a></p>
+    <p class="title">SUNDAY, DAY 8  ANGELS DECLARE THE VICTORY!  SATAN IS DEFEATED!</p>
+   
+        
 
     <a class="back-button" href="../../index.html">Back to Vitamins</a>
     <div></div>
