--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a class="normal-links" href="#" data-name="Letters">Love Letters from God</a>
                     <a class="normal-links" href="#" data-name="Grace">Grace</a>
                     <a class="normal-links" href="#" data-name="Wisdom">Wisdom from Above</a>
-                    <!-- <a class="bonus" href="#" data-name="Resurrection">Bonus Vitamin - Royal Resurrection</a> -->
+                    <a class="bonus" href="#" data-name="Resurrection"><i>Bonus Vitamin</i> - Royal Resurrection</a>
 
                 </div>
                 <div class="title">Spiritual Vitamins</div>
@@ -92,7 +92,7 @@
             </nav>
             <footer class="footer">Scroll the latest news here...</footer>
     </div>
-
+    <script src="content.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
