--- a/assets/letters/Ark.html
+++ b/assets/letters/Ark.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="letter.css">
 </head>
 <body>
-    <img src="/assets/scanned vitamins/ark.jpg"/>
+    <img src="../scanned vitamins/ark.jpg"/>
     <p><a href="#">Exodus 20:5-6</a> "You shall not worship them (other gods), for I the LORD your God am a jealous God visiting the sins of the fathers on the children to the 3rd and 4th generation of those who hate me, but showing lovingkindness to thousands to those who love me and keep my commandments."</p>
     <p>GOD used Noah as an example for us.</p>
     <p>If you open your Bible to Genesis Chapter 5 Noah's life begins. In <a href="#">Genesis 6:1-22</a> we read about the condition of the world in Noah's time. God tells about how corrupt and evil all the people were. It is much like that today in America and even the rest of the world. Everyone except Noah was wicked and evil and without a love for the LORD GOD, our creator.</p>
